[gd_scene load_steps=4 format=3 uid="uid://bm03rko2ejhlp"]

[ext_resource type="Script" path="res://src/ui/screen_ui/card_effect.gd" id="1_4pih7"]
[ext_resource type="Texture2D" uid="uid://vhfa0xxtkrgd" path="res://assets/art/ui/UI backgrounds/common_bg.svg" id="1_oywk3"]
[ext_resource type="FontFile" uid="uid://rwidue26o0fh" path="res://assets/fonts/ShortXurkit-2Xdv.ttf" id="2_fpyqm"]

[node name="Card_Effect_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pih7")

[node name="Rarity_Bg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 768.0
offset_bottom = 431.0
texture = ExtResource("1_oywk3")
expand_mode = 1

[node name="Card_Name" type="Label" parent="."]
layout_mode = 0
offset_left = 695.0
offset_top = 336.0
offset_right = 776.0
offset_bottom = 363.0
rotation = -0.654498
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("2_fpyqm")
text = "title"
horizontal_alignment = 2

[node name="Effect_Duration" type="Label" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 365.0
offset_right = 769.0
offset_bottom = 444.0
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_shadow_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("2_fpyqm")
theme_override_font_sizes/font_size = 75
text = "  9.99"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Effect_Description" type="Label" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 336.0
offset_right = 761.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_shadow_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("2_fpyqm")
theme_override_font_sizes/font_size = 20
text = "effect"
horizontal_alignment = 2
vertical_alignment = 2
